add section: JVM Garbage Collectors